src/main/java/com/example/authpoo/error/ExceptionHandler.java
package com.example.authpoo.error;

public interface ExceptionHandler {

    void handleException ();

}
